<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/Details_constraint_layout"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_short"
            android:layout_marginRight="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_short"
            android:scaleType="centerCrop"
            android:contentDescription="@string/model_image"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/title_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Movie_poster" />

        <TextView
            android:id="@+id/Movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_med"
            android:layout_marginLeft="@dimen/margin_short"
            android:layout_marginRight="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_med"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/Movie_poster" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/overview_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/Movie_Overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_short"
            android:paddingRight="@dimen/margin_med"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/rating_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Movie_Overview" />

        <TextView
            android:id="@+id/Movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_med"
            android:layout_marginLeft="@dimen/margin_short"
            android:layout_marginRight="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_short"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/Movie_Overview" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/release_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/Movie_releasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_short"
            android:layout_marginEnd="@dimen/margin_med"
            android:layout_marginLeft="@dimen/margin_short"
            android:layout_marginRight="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_med"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/Movie_rating" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_short"
            android:layout_marginEnd="@dimen/margin_short"
            android:layout_marginLeft="@dimen/margin_short"
            android:layout_marginRight="@dimen/margin_short"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_short"
            app:layout_constraintBottom_toBottomOf="@+id/Movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Movie_poster" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/trailers"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_short"
            android:layout_marginLeft="@dimen/margin_short"
            android:layout_marginRight="@dimen/margin_short"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_short"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/reviews"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailers_recyclerview" />



        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_short"
            android:layout_marginLeft="@dimen/margin_short"
            android:layout_marginRight="@dimen/margin_short"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_med"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_med"
            android:layout_marginEnd="@dimen/margin_short"
            android:layout_marginLeft="@dimen/margin_short"
            android:layout_marginRight="@dimen/margin_short"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/add_to_favourites"
            android:textColor="#fff"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews_recyclerView" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>